--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   /*height: 100%;*/
-  background-image: url("images/dot-grid.png");
+  background-image: url("images/background/dot-grid.png");
 
 }
 
