--- a/src/styles/componentHeader.css
+++ b/src/styles/componentHeader.css
@@ -5,6 +5,7 @@
     padding: 25px 40px;
     text-transform: uppercase;
     font-family: 'Roboto', sans-serif;
+    text-align: left;
 }
 
 @media (max-width: 600px) {
