--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,11 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background-image: url("images/background/dot-grid.png");
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+html {
+  max-width: 100%;
+  overflow-x: hidden;
 }
