fix the margin for contact component

--- a/src/styles/componentHeader.css
+++ b/src/styles/componentHeader.css
@@ -8,3 +8,10 @@
     font-weight: 100;
     text-align: left;
 }
+
+@media all and (max-width: 600px) {
+    .styleHeader {
+        padding-left: 10px;
+        font-size: 38px!important;
+    }
+}
